kustomize/environments/overlays/gloo-edge/virtualservice/hipstershop/hipstershop-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: hipstershop-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - 'hipstershop.solo.io'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: default-frontend-80
              namespace: gloo-system
